<resources>
    <string name="app_name">LawnmowerMan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="tab_text_1">Start/Stop</string>
    <string name="tab_text_2">Schedule</string>
    <string name="more">More...</string>
    <string name="on">On...</string>
    <string name="sprinkler1">Sprinkler 1</string>
    <string name="sprinkler2">Sprinkler 2</string>
    <string name="sprinkler3">Sprinkler 3</string>
    <string name="sprinkler4">Sprinkler 4</string>
    <string name="logout">Log out</string>
    <string name="refresh">Refresh</string>

</resources>
